--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,27 @@
 .reveal-text-container {
   font-kerning: none;
 }
-body {
-  background-color: blue;
+
+.rotating-gradient::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: conic-gradient(
+    from -45deg,
+    transparent 0deg 270deg,
+    rgba(255, 255, 255, 1) 270deg 360deg
+  );
+  animation: rotate 5s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
